Clean up OAS3 and fix bugs
